feature: change functions in jwtService