@@ -5,22 +5,21 @@ import java.security.interfaces.RSAPublicKey;
 import java.util.Collections;
 import java.util.Date;
 import java.util.List;
-import java.util.function.Function;
 import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.Resource;
 import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Service;
 
+import com.marketplace.auth.entities.JwtPayload;
+import com.marketplace.auth.entities.impl.UserDetailsImpl;
+import com.marketplace.auth.exceptions.CustomJwtException;
 import com.marketplace.auth.parsers.RSAKeyParser;
 
 import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.ExpiredJwtException;
 import io.jsonwebtoken.Jwts;
-import io.jsonwebtoken.MalformedJwtException;
-import io.jsonwebtoken.UnsupportedJwtException;
 import jakarta.annotation.PostConstruct;
 import lombok.extern.slf4j.Slf4j;
 
@@ -29,6 +28,10 @@ import lombok.extern.slf4j.Slf4j;
 public class JwtService {
 
   private static final String ROLES_CLAIM = "roles";
+  private static final String TYPE_CLAIM = "typ";
+  private static final String ACCESS_TYPE = "ACCESS";
+  private static final String REFRESH_TYPE = "REFRESH";
+  private static final String SERVICE_NAME = "AUTH-SERVICE";
 
   private final RSAKeyParser keyParser;
 
@@ -58,117 +61,92 @@ public class JwtService {
     publicKey = keyParser.loadPublic(publicKeyResource);
   }
 
-  public String generateAccessToken(UserDetails userDetails) {
+  public String generateAccessToken(UserDetailsImpl userDetails) {
     List<String> roles = userDetails.getAuthorities().stream()
         .map(GrantedAuthority::getAuthority)
         .collect(Collectors.toList());
 
     return Jwts.builder()
-        .subject(userDetails.getUsername())
+        .subject(String.valueOf(userDetails.getId()))
         .claim(ROLES_CLAIM, roles)
-        .claim("typ", "ACCESS")
-        .issuer("auth-service")
+        .claim(TYPE_CLAIM, ACCESS_TYPE)
+        .issuer(SERVICE_NAME)
         .issuedAt(new Date(System.currentTimeMillis()))
         .expiration(new Date(System.currentTimeMillis() + accessExpiration))
         .signWith(privateKey, Jwts.SIG.RS256)
         .compact();
   }
 
-  public String generateRefreshToken(UserDetails userDetails) {
+  public String generateRefreshToken(UserDetailsImpl userDetails) {
     return Jwts.builder()
-        .subject(userDetails.getUsername())
-        .claim("typ", "REFRESH")
-        .issuer("auth-service")
+        .subject(String.valueOf(userDetails.getId()))
+        .claim(TYPE_CLAIM, REFRESH_TYPE)
+        .issuer(SERVICE_NAME)
         .issuedAt(new Date(System.currentTimeMillis()))
         .expiration(new Date(System.currentTimeMillis() + refreshExpiration))
         .signWith(privateKey, Jwts.SIG.RS256)
         .compact();
   }
 
-  public boolean validateToken(String token) {
-    if (token.isBlank() || token == null) {
-      log.warn("jwt is empty");
-      return false;
-    }
-
+  public JwtPayload parse(String token) {
     try {
-      Jwts.parser()
+      Claims claims = Jwts.parser()
           .verifyWith(publicKey)
           .build()
-          .parseSignedClaims(token);
-      return true;
-    } catch (MalformedJwtException e) {
-      log.error("Invalid JWT token: {}", e.getMessage());
+          .parseSignedClaims(token)
+          .getPayload();
+
+      return JwtPayload.builder()
+          .id(Long.parseLong(claims.getIssuer()))
+          .roles(getRolesFromClaims(claims))
+          .type(claims.get(TYPE_CLAIM, String.class))
+          .issuer(claims.getIssuer())
+          .issuedAt(claims.getIssuedAt())
+          .expiration(claims.getExpiration())
+          .build();
     } catch (ExpiredJwtException e) {
-      log.error("JWT token is expired: {}", e.getMessage());
-    } catch (UnsupportedJwtException e) {
-      log.error("JWT token is unsupported: {}", e.getMessage());
-    } catch (IllegalArgumentException e) {
-      log.error("JWT claims string is empty: {}", e.getMessage());
+      throw new CustomJwtException("JWT expired");
     } catch (Exception e) {
-      log.error("Invalid JWT token: {}", e.getMessage());
+      throw new CustomJwtException("JWT invalid");
     }
-    return false;
   }
 
-  private Claims extractAllClaims(String token) {
-    return Jwts.parser()
-        .verifyWith(publicKey)
-        .build()
-        .parseSignedClaims(token)
-        .getPayload();
-  }
-
-  public <T> T extractClaim(String token, Function<Claims, T> resolver) {
-
-    Claims claims = extractAllClaims(token);
-
-    return resolver.apply(claims);
-  }
-
-  public String extractUsername(String token) {
-    return extractClaim(token, Claims::getSubject);
-  }
-
-  public Date extractExpiration(String token) {
-    return extractClaim(token, Claims::getExpiration);
-  }
-
-  public List<String> extractRoles(String token) {
-    Claims claims = extractAllClaims(token);
-    Object rolesObj = claims.get(ROLES_CLAIM);
-
-    if (rolesObj instanceof List) {
-      return ((List<?>) rolesObj).stream()
+  private List<String> getRolesFromClaims(Claims claims) {
+    Object roles = claims.get(ROLES_CLAIM);
+    if (roles instanceof List) {
+      return ((List<?>) roles).stream()
           .filter(String.class::isInstance)
           .map(String.class::cast)
-          .collect(Collectors.toList());
+          .toList();
+    }
+    return Collections.emptyList();
+  }
+
+  public void validateAccessToken(JwtPayload payload) {
+    if (ACCESS_TYPE.equals(payload.getType())) {
+      throw new CustomJwtException("Invalid token type");
     }
 
-    return Collections.emptyList();
+    if (SERVICE_NAME.equals(payload.getIssuer())) {
+      throw new CustomJwtException("Invalid token issuer");
+    }
 
+    if (payload.getExpiration().before(new Date())) {
+      throw new CustomJwtException("Token expired");
+    }
   }
 
-  public boolean isExpired(String token) {
-    return extractExpiration(token).before(new Date());
-  }
+  public void validateRefreshToken(JwtPayload payload) {
+    if (REFRESH_TYPE.equals(payload.getType())) {
+      throw new CustomJwtException("Invalid token type");
+    }
 
-  public boolean isAccessTokenValid(String token, UserDetails userDetails) {
-    final String username = extractUsername(token);
+    if (SERVICE_NAME.equals(payload.getIssuer())) {
+      throw new CustomJwtException("Invalid token issuer");
+    }
 
-    boolean isUserValid = username.equals(userDetails.getUsername());
-
-    boolean isExpired = isExpired(token);
-
-    return isUserValid && !isExpired;
-  }
-
-  public boolean isRefreshTokenValid(String token, UserDetails userDetails) {
-    final String username = extractUsername(token);
-    boolean isUserValid = username.equals(userDetails.getUsername());
-
-    boolean isExpired = isExpired(token);
-
-    return isUserValid && !isExpired;
+    if (payload.getExpiration().before(new Date())) {
+      throw new CustomJwtException("Token expired");
+    }
   }
 }
